--- a/HTML5/SQLiteSyncDEMO HTML+jQuery/index.htm
+++ b/HTML5/SQLiteSyncDEMO HTML+jQuery/index.htm
@@ -21,7 +21,6 @@
 	<tr>
 		<td>Server:</td>
 				<td><input type="text" id="syncUrl" value="http://localhost:8080/API3/" size="50" /></td>
-		<!-- <td><input type="text" id="syncUrl" value="http://demo.sqlite-sync.com:8081/SqliteSync/API3/" size="50" /></td> -->
 	</tr>
 	</table>
      <br/>
@@ -122,7 +121,7 @@
 
         function createDBConnection(){
 
-            var shortName = 'sqlitesyncDemo5';
+            var shortName = 'sqlitesyncDemo';
             var version = '1.0';
             var displayName = 'sqlitesyncDemo';
             var maxSize = 5 * 1024 * 1024; // in bytes
