--- a/Ionic/SqliteSyncDemo/src/pages/home/home.html
+++ b/Ionic/SqliteSyncDemo/src/pages/home/home.html
@@ -24,7 +24,7 @@
       SELECT * FROM
     </button>
   </ion-list>
-<p style="margin-bottom: 10px; color:white; position: fixed; bottom: 0; width:100%; text-align: center">&copy; 2017 <a href="www.sqlite-sync.com" style="color:white">SQLite-sync.com</a> <br> All rights reserved</p>
+<p style="margin-bottom: 10px; color:white; position: fixed; bottom: 0; width:100%; text-align: center; font-size: 12px">&copy; 2017 <a href="www.sqlite-sync.com" style="color:white">SQLite-sync.com</a> <br> All rights reserved</p>
 </ion-content>
 
 
