Application name changed / external links app-in browser added

--- a/Ionic/SqliteSyncDemo/src/pages/home/home.html
+++ b/Ionic/SqliteSyncDemo/src/pages/home/home.html
@@ -1,3 +1,4 @@
+
 <ion-header>
     <ion-title>
      <img class="logo" alt="SQLiteSync logo" height="60" src="assets/sqlite_sync_logo.png">
@@ -24,5 +25,5 @@
       SELECT * FROM
     </button>
   </ion-list>
-<p class="footer">&copy; 2017 <a href="www.sqlite-sync.com" style="color:white">SQLite-sync.com</a> <br> All rights reserved</p>
+<p class="footer">&copy; 2017 <a href="#" onclick="window.open('http://sqlite-sync.com', '_system', 'location=yes');" style="color:white">SQLite-sync.com</a><br> All rights reserved</p>
 </ion-content>
