--- a/Ionic/SqliteSyncDemo/src/index.html
+++ b/Ionic/SqliteSyncDemo/src/index.html
@@ -7,7 +7,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icon/sqlite_sync_icon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
