--- a/Ionic/SqliteSyncDemo/src/pages/home/home.html
+++ b/Ionic/SqliteSyncDemo/src/pages/home/home.html
@@ -8,11 +8,11 @@
   <ion-list>
   <ion-item class="item">
     <ion-label color="primary">Sync URL</ion-label>
-    <ion-input placeholder="Enter URL to synchronize" value="http://demo.sqlite-sync.com:8081/SqliteSync/API3"></ion-input>
+    <ion-input placeholder="Enter URL to synchronize" [(ngModel)]="syncUrl"></ion-input>
   </ion-item>
   <br>
   <br>
-    <button ion-button block class="button">
+    <button ion-button block class="button" (click)="reinitializeDB()">
       Reinitialize database
     </button>
     <br>
@@ -26,5 +26,3 @@
   </ion-list>
 <p style="margin-bottom: 10px; color:white; position: fixed; bottom: 0; width:100%; text-align: center; font-size: 12px">&copy; 2017 <a href="www.sqlite-sync.com" style="color:white">SQLite-sync.com</a> <br> All rights reserved</p>
 </ion-content>
-
-
