INSERT INTO layout added

--- a/Ionic/SqliteSyncDemo/src/pages/home/home.html
+++ b/Ionic/SqliteSyncDemo/src/pages/home/home.html
@@ -13,15 +13,15 @@
   </ion-item>
   <br>
   <br>
-    <button ion-button round block class="button" (click)="reinitializeDB()">
+    <button ion-button block class="button" (click)="reinitializeDB()">
       Reinitialize database
     </button>
     <br>
-    <button ion-button round block class="button">
+    <button ion-button block class="button">
       Synchronize database
     </button>
     <br>
-    <button ion-button round block class="button" (click)="presentActionSheet()">
+    <button ion-button block class="button" (click)="presentActionSheet()">
       SELECT * FROM
     </button>
   </ion-list>
