sqlitesync libs added

--- a/Ionic/SqliteSyncDemo/src/index.html
+++ b/Ionic/SqliteSyncDemo/src/index.html
@@ -13,6 +13,9 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
+  <script src="assets/scripts/sqlitesync.js"></script>
+  <script src="assets/scripts/sqlitesynchelpers.js"></script>
+  <script src="assets/scripts/jquery-2.0.2.min.js"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
