--- a/Ionic/SqliteSyncDemo/src/pages/table/table.html
+++ b/Ionic/SqliteSyncDemo/src/pages/table/table.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>table</ion-title>
+    <ion-title>{{ tbl_name | uppercase}}</ion-title>
   </ion-navbar>
 
 </ion-header>
