--- a/Ionic/SqliteSyncDemo/src/pages/insert/insert.html
+++ b/Ionic/SqliteSyncDemo/src/pages/insert/insert.html
@@ -1,7 +1,7 @@
 
 <ion-content padding class="bg-style">
   <p style="color:white">INSERT INTO</p>
-  <ion-input aria-placeholder=""></ion-input>
+  <ion-input type="text" autofocus style="color:white"></ion-input>
     <button ion-button (click)="backToTable()">
       Back
     </button>
