--- a/Ionic/SqliteSyncDemo/src/pages/table/table.html
+++ b/Ionic/SqliteSyncDemo/src/pages/table/table.html
@@ -11,6 +11,11 @@
 <ion-content padding class="bg-style">
 <ion-grid>
   <ion-row>
+    <ion-col col-auto *ngFor="let column of columns">
+      {{ column.name }}
+    </ion-col>
+  </ion-row>
+  <ion-row *ngFor="let row of rows">
     <ion-col>
       <button ion-button block style="background-color: #5a595B; color: white" (click)="editBtn()">
       Edit
@@ -21,12 +26,12 @@
       Delete
      </button>
     </ion-col>
-    <ion-col col-auto>
-      test
+    <ion-col col-auto *ngFor="let key of columns">
+      {{ row[key.name] }}
     </ion-col>
   </ion-row>
 </ion-grid>
  <button ion-button block class="buttonBack" (click)="goBack()">
       Back
-    </button> 
+  </button> 
 </ion-content>
