--- a/Ionic/SqliteSyncDemo/src/pages/insert/insert.html
+++ b/Ionic/SqliteSyncDemo/src/pages/insert/insert.html
@@ -1,16 +1,27 @@
-
 <ion-content padding class="bg-style">
-  <p style="color:white; font-size:20px;">INSERT INTO <br>[{{ tbl_name | uppercase}}]</p>
-  <ion-input type="text" autofocus style="color:white"></ion-input>
-    <button ion-button (click)="backToTable()">
-      Back
-    </button>
-    <button ion-button (click)="submitButton()">
-      Submit
-    </button>
-    <br>
-    <p style="color:white">
-      * Leave identity column unchanged<br>
-      * For date columns follow format:<br>
-      'yyyy-MM-dd HH:mm:ss'</p>
+    <p style="text-align:center;color:white; font-size:20px;">INSERT INTO [{{ tbl_name | uppercase}}]</p>
+  <ion-list>
+    <ion-item *ngFor="let column of columns" style="background-color:transparent;color:white;">
+      <ion-label style="color:white;" floating>{{column.name}}</ion-label>
+      <ion-input [type]="getType(column.type)" [(ngModel)]="insertModel[column.name]" autofocus style="color:white">
+      </ion-input>
+    </ion-item>
+    <ion-row>
+      <ion-col col-6 style="text-align: right;border:0px">
+        <button ion-button (click)="backToTable()" style="width:100%;">
+          Back
+        </button>
+      </ion-col>
+      <ion-col col-6 style="text-align: left;border:0px">
+        <button ion-button (click)="submitButton()" style="width:100%;">
+          Submit
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-list>
+  <p style="color:white">
+    * Leave identity column unchanged<br>
+    * For date columns follow format:<br>
+    'yyyy-MM-dd HH:mm:ss'
+  </p>
 </ion-content>
