--- a/Ionic/SqliteSyncDemo/src/pages/table/table.html
+++ b/Ionic/SqliteSyncDemo/src/pages/table/table.html
@@ -7,34 +7,21 @@
     <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
 
 <ion-content padding class="bg-style">
-<ion-grid>
-  <ion-row>
-<<<<<<< HEAD
-    <ion-col col-auto>
-      test
-=======
-    <ion-col col-auto *ngFor="let column of columns">
+  <ion-scroll scrollX="true" scrollY="true" style="height:67vh">
+  <table>
+  <tr nowrap>
+    <td *ngFor="let column of columns">
       {{ column.name }}
-    </ion-col>
-  </ion-row>
-  <ion-row *ngFor="let row of rows">
-    <ion-col>
-      <button ion-button block style="background-color: #5a595B; color: white" (click)="editBtn()">
-      Edit
-    </button> 
-    </ion-col>
-    <ion-col>
-     <button ion-button block style="background-color: #5a595B; color: white" (click)="deleteBtn()">
-      Delete
-     </button>
-    </ion-col>
-    <ion-col col-auto *ngFor="let key of columns">
+    </td>
+  </tr>
+   <tr *ngFor="let row of rows" nowrap> 
+      <td *ngFor="let key of columns">
       {{ row[key.name] }}
->>>>>>> 484989c1e766161a9b75e47095c54bb978d3d043
-    </ion-col>
-  </ion-row>
-</ion-grid>
- <button ion-button block class="buttonBack" (click)="goBack()">
+    </td>
+   </tr> 
+</table>
+  </ion-scroll>
+<button ion-button block class="buttonBack" (click)="goBack()">
       Back
   </button> 
 </ion-content>
